Contest: regrade bundle submissions sync for simplicity (#770)